--- a/01-javascript/02-js-fundamentals/03-hunting-github.html
+++ b/01-javascript/02-js-fundamentals/03-hunting-github.html
@@ -5,7 +5,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Search and return GitHub name given login</title>
+        <title>World Information</title>
         <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 
 
