--- a/01-javascript/02-js-fundamentals/KH-SampleAPI-DOM-World.html
+++ b/01-javascript/02-js-fundamentals/KH-SampleAPI-DOM-World.html
@@ -5,15 +5,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gotta Catch'em All</title>
+        <title>World Information</title>
         <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 
 
             <script>
             $(document).ready(function(){
-                $.get("https://api.github.com/users/khervey", function(res) {
+                $.get("https://restcountries.eu/rest/v2/", function(res) {
                     console.log(res);
-                    console.log("name is:  " + res.name);
+                    var countryNumber = 0;
+                    console.log("country number:  " + countryNumber + " is: ");
+                    console.log(res[0]);
+                    console.log("the name is:  " + res[0].name);
                     //console.log("species is:  ");
                     //console.log(res.species['url']);
                     //document.getElementById("p1").innerHTML = "the top function says:  " + res.name;
