gave attribution in comments

--- a/01-javascript/02-js-fundamentals/KH-SampleAPI-DOM-World.html
+++ b/01-javascript/02-js-fundamentals/KH-SampleAPI-DOM-World.html
@@ -1,4 +1,4 @@
-<!--
+<!--API used:  https://restcountries.eu/#api-endpoints-full-name
     What it does:
     gathers information on a country based on country number.  Currently:
         name, 
