--- a/01-javascript/02-js-fundamentals/06-js-scroll.html
+++ b/01-javascript/02-js-fundamentals/06-js-scroll.html
@@ -3,7 +3,10 @@
 <!-- • The last character of each string in the words array doesn't show up.
     >>>>fixed by adding + here:   if(character_counter == words[word_counter].length+1)
 
-• The blank spaces are not appearing correctly. The cursor does not correctly shift to the right on blank spaces, instead it pauses on the previous letter and jumps to the next letter. -->
+• The blank spaces are not appearing correctly. The cursor does not correctly shift to the right on blank spaces, instead it pauses on the previous letter and jumps to the next letter. 
+--Solved this, too
+-->
+
 
 
 <html>
