bit of code cleanup

--- a/01-javascript/02-js-fundamentals/05-game-of-thrones.html
+++ b/01-javascript/02-js-fundamentals/05-game-of-thrones.html
@@ -43,10 +43,7 @@ Baratheon: 17
         <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 
 
-            <script>
-
-
-
+        <script>
             function toSentence(arr) { //outputs an array
             return arr.slice(0, -2).join(', ') + 
                 (arr.slice(0, -2).length ? ', ' : '') + 
@@ -146,15 +143,12 @@ Baratheon: 17
                         document.getElementById("houseDetails").innerHTML = outputStringAll;
                     }, "json");
                 })
-
-
-
             })
         </script>
 
     </head>
     <body>
-            <div id="threeImages">
+            <div id="fourImages">
                 <img class="houseImages" id="stark" src="assets/gameofthrones/stark.jpg" alt="house of stark" value=362>
                 <img class="houseImages" id="lannister" src="assets/gameofthrones/lannister.jpg" alt="house of lannister" value=229>
                 <img class="houseImages" id="targaryen" src="assets/gameofthrones/targaryen.jpg" alt="house of targaryen" value=378>
