--- a/02-node/01-node/01-landing-page/node_server/index.html
+++ b/02-node/01-node/01-landing-page/node_server/index.html
@@ -18,6 +18,14 @@
         <div>
             <h1>Hello World</h1>
             <p>Some basic content</p>
+            <a href="/cars.html">All Cars</a>
+            <a href="/cats.html">All Animals</a>
+            <a href="/newcar.html">Form that could add cars</a>
+
+
+
+
+
         </div>
         
         <script src="" async defer></script>
