--- a/02-node/01-node/02-cars-and-cats/node_server/index.html
+++ b/02-node/01-node/02-cars-and-cats/node_server/index.html
@@ -19,9 +19,9 @@
             <h1>Hello World</h1>
             <p>Some basic content</p>
 
-            <a href="/cars.html">All Cars</a>
-            <a href="/cats.html">All Animals</a>
-            <a href="/newcar.html">Form that could add cars</a>
+            <a href="/cars">All Cars</a>
+            <a href="/cats">All Animals</a>
+            <a href="/cars/new">Form that could add cars</a>
 
 
 
