--- a/05-angular/04-navigation/weatherAPI/src/index.html
+++ b/05-angular/04-navigation/weatherAPI/src/index.html
@@ -1,14 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>WeatherAPI</title>
-  <base href="/">
+  <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://121.0.0:3000/"
+    />
+    <meta charset="utf-8" />
+    <title>WeatherAPI</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
